# ChangeLog for dev-libs/libffi
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libffi/ChangeLog,v 1.38 2006/06/06 01:23:21 eradicator Exp $

  06 Jun 2006; Jeremy Huddleston <eradicator@gentoo.org>
  libffi-3.3.5.ebuild, libffi-3.4.1.ebuild, libffi-3.4.1-r1.ebuild,
  libffi-3.4.3.ebuild:
  Updated DEPEND to accept eselect-compiler.

  08 Jan 2006; Michael Hanselmann <hansmi@gentoo.org> metadata.xml:
  Remove retiring dev from metadata.

  05 Jan 2006; Gustavo Zacarias <gustavoz@gentoo.org> libffi-3.4.3.ebuild:
  Stable on sparc

  22 Dec 2005; Joshua Nichols <nichoj@gentoo.org> libffi-3.4.1.ebuild:
  Fixed multilib-strict violation (bug #74949).

  21 Dec 2005; Seemant Kulleen <seemant@gentoo.org> libffi-3.3.5.ebuild,
  libffi-3.4.1.ebuild, libffi-3.4.1-r1.ebuild, libffi-3.4.3.ebuild:
  Fix QA violation of awk in the global scope. Change to versionator eclass
  instead. Thanks to: Christian Heim in bug #108388

  22 May 2005; Jason Wever <weeve@gentoo.org> libffi-3.4.3.ebuild:
  Added ~sparc keyword.

  06 May 2005; Sven Wegener <swegener@gentoo.org> libffi-3.4.1-r1.ebuild,
  libffi-3.4.3.ebuild:
  Removed * postfix from <, <=, >= and > dependencies.

  09 Apr 2005; Armando Di Cianno <fafhrd@gentoo.org> -libffi-3.3.3.ebuild,
  -libffi-3.3.3-r1.ebuild, -libffi-3.3.4.ebuild, libffi-3.4.1-r1.ebuild:
  Pruning old ebuilds that are no longer needed.

  06 Apr 2005; Markus Rothe <corsair@gentoo.org> libffi-3.4.3.ebuild:
  Stable on ppc64

  06 Apr 2005; <kloeri@gentoo.org> libffi-3.3.3-r1.ebuild,
  libffi-3.3.5.ebuild:
  ~alpha cleanup.

  04 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> libffi-3.4.3.ebuild:
  Stable on ppc.

  04 Apr 2005; Gustavo Zacarias <gustavoz@gentoo.org> libffi-3.3.4.ebuild,
  libffi-3.3.5.ebuild:
  3.3.5 to sparc stable, 3.3.4 removed ~sparc for cleanup

  04 Apr 2005; Gustavo Zacarias <gustavoz@gentoo.org> libffi-3.3.5.ebuild:
  Stable on sparc

*libffi-3.3.5 (14 Mar 2005)
