@@ -1,1 +1,3 @@
 MD5 70ee088b498741bb08c779f9617df3a5 gcc-3.3.5.tar.bz2 23833856
+RMD160 34adf1a6f7ea302e9937c1a06ccf362711e25c58 gcc-3.3.5.tar.bz2 23833856
+SHA256 4ae90c6948d2654a254116fabb0cc7e474abf51ea841e6ef5cd8e6c161a9fa74 gcc-3.3.5.tar.bz2 23833856
