@@ -1,1 +1,3 @@
 MD5 31b459062499f9f68d451db9cbf3205c gcc-3.4.1.tar.bz2 27182385
+RMD160 b25352913fde37121e2dfe5521149bdaf08b0f5d gcc-3.4.1.tar.bz2 27182385
+SHA256 5f3685533f8dc4b42b926fe70bb371b31e1368223a0ad7398ba27ea3a20e8e7a gcc-3.4.1.tar.bz2 27182385
