@@ -1,1 +1,3 @@
 MD5 e744b30c834360fccac41eb7269a3011 gcc-3.4.3.tar.bz2 27425338
+RMD160 0a688fd34b58548b99e08ccf778281bf470f925d gcc-3.4.3.tar.bz2 27425338
+SHA256 63dc1c03a107ec73871151bb765da7d5dfc1d699c0d0d6a3d244cf5ccb030913 gcc-3.4.3.tar.bz2 27425338
