@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libffi
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libffi/ChangeLog,v 1.38 2006/06/06 01:23:21 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libffi/ChangeLog,v 1.39 2006/07/27 17:16:09 grobian Exp $
+
+  27 Jul 2006; Fabian Groffen <grobian@gentoo.org> libffi-3.3.5.ebuild,
+  libffi-3.4.1.ebuild, libffi-3.4.1-r1.ebuild, libffi-3.4.3.ebuild:
+  QA fixes for bug #141378: build is not really used, so remove its trails.
+  Remove gnustep as maintainer, gnustep-base is moving away from it.
 
   06 Jun 2006; Jeremy Huddleston <eradicator@gentoo.org>
   libffi-3.3.5.ebuild, libffi-3.4.1.ebuild, libffi-3.4.1-r1.ebuild,
